Fix bug phần Client

--- a/index.html
+++ b/index.html
@@ -76,11 +76,21 @@
           </div>
 
           <div class="slogans">
-            <img src="./assets/img/meundies.svg" alt="MeUndies" />
-            <img src="./assets/img/slack.svg" alt="Slack" />
-            <img src="./assets/img/amazon.svg" alt="Amazon" />
-            <img src="./assets/img/commerse.svg" alt="Commerse" />
-            <img src="./assets/img/sitepoint.svg" alt="Sitepoint" />
+            <a href="#!">
+              <img src="./assets/img/meundies.svg" alt="MeUndies" />
+            </a>
+            <a href="#!">
+              <img src="./assets/img/slack.svg" alt="Slack" />
+            </a>
+            <a href="#!">
+              <img src="./assets/img/amazon.svg" alt="Amazon" />
+            </a>
+            <a href="#!">
+              <img src="./assets/img/commerse.svg" alt="Commerse" />
+            </a>
+            <a href="#!">
+              <img src="./assets/img/sitepoint.svg" alt="Sitepoint" />
+            </a>
           </div>
         </div>
       </div>
