Fix bug phần Social

--- a/index.html
+++ b/index.html
@@ -536,15 +536,15 @@
                 You’ll find your next home, in any style you prefer.
               </p>
               <div class="social">
-                <a href="#!" class="socila-link">
+                <a href="#!" class="social-link">
                   <img src="./assets/img/facebook.svg" alt="facebook" />
                 </a>
 
-                <a href="#!" class="socila-link">
+                <a href="#!" class="social-link">
                   <img src="./assets/img/twitter.svg" alt="twitter" />
                 </a>
 
-                <a href="#!" class="socila-link">
+                <a href="#!" class="social-link">
                   <img src="./assets/img/linkedin.svg" alt="linkedin" />
                 </a>
               </div>
