Sửa lại vài chỗ

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a href="#!" class="btn action-btn">Sign up</a>
             </div>
           </nav>
-
+          <!-- Hero -->
           <div class="hero">
             <div class="info">
               <div class="sub-title">Welcome to Besnik Agency</div>
@@ -70,7 +70,7 @@
             </div>
           </div>
 
-          <div class="row">
+          <div class="row row-desc">
             <p class="desc">More than 45,000+ companies trust besnik</p>
             <p class="desc">5 Star Ratings (2k+ Review)</p>
           </div>
@@ -281,6 +281,7 @@
               <img
                 src="./assets/img/stat_1.jpg"
                 alt="You’ve found a neighborhood you love."
+                class="image"
               />
 
               <!-- Trend -->
@@ -550,7 +551,6 @@
               </div>
             </div>
           </div>
-
           <div class="row row-bottom">
             <img src="./assets/img/logo.svg" alt="Besnik" class="logo" />
             <p class="copyright">Copyright 2020.com, All rights reserved.</p>
