Cải thiện phần Header

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   </head>
   <body>
     <main>
-      <!-- Header -->
-      <header class="header">
+      <header class="fix-header">
         <div class="content">
           <nav class="navbar">
             <!-- Logo -->
@@ -40,6 +39,12 @@
               <a href="#!" class="btn action-btn">Sign up</a>
             </div>
           </nav>
+        </div>
+      </header>
+
+      <!-- Hero -->
+      <div class="hero-wrap">
+        <div class="content">
           <!-- Hero -->
           <div class="hero">
             <div class="info">
@@ -56,7 +61,7 @@
             <img src="./assets/img/heroimg.svg" alt="" class="hero-img" />
           </div>
         </div>
-      </header>
+      </div>
 
       <!-- Client -->
       <div class="clients">
