--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
-    <main>
+    <main id="home">
       <header class="fix-header">
         <div class="content">
           <nav class="navbar">
@@ -29,11 +29,11 @@
             </a>
             <!-- Navigation -->
             <ul>
-              <li><a href="#!">Home</a></li>
-              <li><a href="#!">Features</a></li>
-              <li><a href="#!">Services</a></li>
-              <li><a href="#!">Resources</a></li>
-              <li><a href="#!">Contact</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#featured">Features</a></li>
+              <li><a href="#resource">Resources</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
             <!-- Action -->
             <div class="actions">
@@ -103,7 +103,7 @@
       </div>
 
       <!-- Guides -->
-      <div class="guides">
+      <div id="services" class="guides">
         <div class="content">
           <h2 class="sub-title">How its works?</h2>
           <p class="desc">
@@ -170,7 +170,7 @@
       </div>
 
       <!-- Features -->
-      <div class="features">
+      <div id="featured" class="features">
         <div class="content">
           <header>
             <h2 class="sub-title">Featured Properties</h2>
@@ -281,7 +281,7 @@
       </div>
 
       <!-- Stats -->
-      <div class="stats">
+      <div id="resource" class="stats">
         <div class="content">
           <div class="row">
             <div class="img-block">
@@ -457,7 +457,7 @@
       </div>
 
       <!-- Subcription -->
-      <div class="subscription">
+      <div id="contact" class="subscription">
         <div class="content">
           <div class="body">
             <div class="info">
