Hero content center

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
-    <main id="home">
+    <main>
       <header class="fix-header">
         <div class="content">
           <nav class="navbar">
             <!-- Logo -->
-            <a href="#!">
+            <a href="#">
               <img src="./assets/img/logo.svg" alt="Besnik." />
             </a>
             <!-- Navigation -->
             <ul>
-              <li><a href="#home">Home</a></li>
+              <li><a href="#">Home</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#featured">Features</a></li>
               <li><a href="#resource">Resources</a></li>
